# pyservx

./: .gitignore  .pypirc  CHANGELOG.md  CHANGELOG_v3.0.md  CLOUD_SECURITY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PYPI_PUBLISH_GUIDE.md  PYPI_READY.md  QUICK_PUBLISH.md  README.md  SECURITY.md  VAPT_INTEGRATION.md  glass_theme.css  log.txt  publish_to_pypi.py  pyproject.toml  run.py  workflow.yaml
.github/workflows/: github-pages.yml  workflow.yaml
.kiro/specs/qr-code-size-optimization/: design.md  requirements.md  tasks.md
docs/: border_radius_implementation.md  glass_theme_system.md  index.html  shadow_system_implementation.md
examples/: glass_theme_demo.py
pyservx/: __init__.py  access_logger.py  file_operations.py  glass_theme_system.py  html_generator.py  integrity_checker.py  request_handler.py  security_scanner.py  server.py
pyservx-enhanced/: README.md  install.py  requirements.txt  run.py
pyservx-enhanced/pyservx/: file_operations.py  html_generator.py  request_handler.py  server.py
tests/: test_glass_theme_system.py  test_html_generator.py  test_server.py
