[project]
name = "pyservx"
version = "1.1.0"
description = "A simple Python server package for file sharing with a retro UI."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
    { name = "Subz3r0x01", email = "subz3r0x01@protonmail.com" }
]
dependencies = [
    "qrcode"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/yourusername/pyservx"
Repository = "https://github.com/yourusername/pyservx"

[project.scripts]
pyservx = "pyservx.server:main"