[project]
name = "pyservx"
version = "3.0.2"
description = "A feature-rich Python HTTP server for file sharing with Apple iOS glass theme UI, real-time search, direct media downloads, permanent text clipboard, and dark/light themes."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
keywords = ["file server", "http server", "file sharing", "glass theme", "glassmorphism", "real-time search", "media downloads", "text clipboard", "pyservx", "dark mode", "light mode", "notepad", "text editor", "file preview", "analytics", "thumbnails", "apple ios", "animated background"]
authors = [
    { name = "Subz3r0x01", email = "subz3r0x01@protonmail.com" }
]
dependencies = [
    "Pillow"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Filesystems",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["pyservx*"] }

[project.urls]
Homepage = "https://github.com/SubZ3r0-0x01/pyservx"
Repository = "https://github.com/SubZ3r0-0x01/pyservx"

[project.scripts]
pyservx = "pyservx.server:main"